<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pepper_interface_tests</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dbarros2003@gmail.com">dani</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>image_transport</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend>

  <build_depend>ament_index_cpp</build_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <build_export_depend>ament_index_cpp</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
